--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,16 +81,61 @@ jobs:
       - name: Create prebuilt directory
         run: mkdir -p prebuilt
       
-      - name: Install Android NDK and Dependencies
+      - name: Build GPU Libraries
         run: |
-          # Then use our dedicated script for external dependency setup
-          scripts/build_android_external.sh
+          # Get Android NDK path
+          NDK_PATH=$ANDROID_HOME/ndk/27.2.12479018
           
-      - name: Build Android Libraries with GPU support
+          # Check if Vulkan SDK components are needed
+          if ! command -v glslc &>/dev/null; then
+            echo "Vulkan SDK components not found, installing minimal requirements..."
+            
+            # Check if we now have glslc
+            if command -v glslc &>/dev/null; then
+              GLSLC_PATH=$(which glslc)
+              echo "✅ Found glslc at: $GLSLC_PATH"
+            else
+              echo "⚠️ glslc not found after installation, will use pre-built shaders"
+              GLSLC_PATH=""
+            fi
+          else
+            GLSLC_PATH=$(which glslc)
+            echo "✅ Found glslc at: $GLSLC_PATH"
+          fi
+          
+          # First build the GPU backend libraries
+          echo "Building Android GPU backend libraries..."
+          if [ -n "$GLSLC_PATH" ]; then
+            scripts/build_android_gpu_backend.sh --abi=all --ndk-path="$NDK_PATH" --glslc-path="$GLSLC_PATH"
+          else
+            scripts/build_android_gpu_backend.sh --abi=all --ndk-path="$NDK_PATH"
+          fi
+          
+          # Verify GPU libraries were built in prebuilt directory
+          if [ -d "prebuilt/gpu/arm64-v8a" ] && [ "$(ls -A prebuilt/gpu/arm64-v8a/ 2>/dev/null)" ]; then
+            echo "✅ Successfully built GPU libraries for arm64-v8a"
+            ls -la prebuilt/gpu/arm64-v8a/
+          else
+            echo "⚠️ No GPU libraries found for arm64-v8a, build may have failed"
+            # Don't fail the workflow, as we'll still try to build with CPU-only
+          fi
+          
+          if [ -d "prebuilt/gpu/x86_64" ] && [ "$(ls -A prebuilt/gpu/x86_64/ 2>/dev/null)" ]; then
+            echo "✅ Successfully built GPU libraries for x86_64"
+            ls -la prebuilt/gpu/x86_64/
+          else
+            echo "⚠️ No GPU libraries found for x86_64, build may have failed"
+            # Don't fail the workflow, as we'll still try to build with CPU-only
+          fi
+      
+      - name: Build Final Android Libraries
         run: |
-          # Execute the build script with GPU support
+          # Get Android NDK path (same as above)
+          NDK_PATH=$ANDROID_HOME/ndk/27.2.12479018
+          
+          # Now build the final Android libraries incorporating the GPU backends
           echo "Building Android libraries with OpenCL and Vulkan support..."
-          scripts/build_android_external.sh --abi=all
+          scripts/build_android_external.sh --abi=all --ndk-path="$NDK_PATH"
           
           # Verify libraries were built successfully
           if [ ! -f "android/src/main/jniLibs/arm64-v8a/libllama.so" ]; then
@@ -116,55 +161,82 @@ jobs:
               exit 1
             fi
           fi
-      
-      - name: Verify GPU Backends in built library
-        run: |
-          # Check for OpenCL and Vulkan symbols in the built library
-          echo "Checking for GPU backend symbols in the built library..."
           
-          # Check for OpenCL symbols in ARM64 library
-          echo "Checking arm64-v8a library:"
-          if nm -D android/src/main/jniLibs/arm64-v8a/libllama.so | grep -i "opencl"; then
-            echo "✅ OpenCL symbols found in arm64-v8a library"
+          # Check for GPU capability flags
+          if [ -f "android/src/main/jniLibs/arm64-v8a/.opencl_enabled" ]; then
+            echo "✅ OpenCL support enabled for arm64-v8a"
           else
-            echo "⚠️ No OpenCL symbols found in arm64-v8a library"
+            echo "⚠️ OpenCL support not enabled for arm64-v8a"
           fi
           
-          # Check for Vulkan symbols in ARM64 library - need to check both "vulkan" and "vk_" prefixes
-          if nm -D android/src/main/jniLibs/arm64-v8a/libllama.so | grep -i -E "vulkan|vk_|ggml.*vulkan"; then
-            echo "✅ Vulkan symbols found in arm64-v8a library"
+          if [ -f "android/src/main/jniLibs/arm64-v8a/.vulkan_enabled" ]; then
+            echo "✅ Vulkan support enabled for arm64-v8a"
           else
-            echo "⚠️ No Vulkan symbols found in arm64-v8a library"
-            echo "Checking for Vulkan compiler flags in the binary..."
+            echo "⚠️ Vulkan support not enabled for arm64-v8a"
+          fi
+      
+      - name: Verify Library Architecture and Symbols
+        run: |
+          # Detailed verification of the final libraries
+          echo "Checking for GPU backend support and architecture correctness..."
+          
+          # Check x86_64 capability flags
+          echo "Checking x86_64 library for GPU support:"
+          if [ -f "android/src/main/jniLibs/x86_64/.opencl_enabled" ]; then
+            echo "✅ OpenCL support enabled in x86_64 library"
+          else
+            echo "❌ No OpenCL support detected in x86_64 library"
+          fi
+          
+          if [ -f "android/src/main/jniLibs/x86_64/.vulkan_enabled" ]; then
+            echo "✅ Vulkan support enabled in x86_64 library"
+          else
+            echo "❌ No Vulkan support detected in x86_64 library"
+          fi
+          
+          # Verify that the main libraries exist and contain GPU symbols
+          if [ -f "android/src/main/jniLibs/arm64-v8a/libllama.so" ]; then
+            echo "Checking for GPU symbols in the main arm64-v8a library:"
             
-            # Check if Vulkan defines are in the binary
-            if strings android/src/main/jniLibs/arm64-v8a/libllama.so | grep -i -E "GGML_VULKAN|VK_USE_PLATFORM"; then
-              echo "✅ Vulkan compilation flags found in arm64-v8a binary"
+            # Check for OpenCL and Vulkan symbols in the actual libllama.so
+            if nm -D android/src/main/jniLibs/arm64-v8a/libllama.so | grep -i "opencl" >/dev/null; then
+              echo "✅ OpenCL symbols found in arm64-v8a libllama.so"
             else
-              echo "❌ No Vulkan compilation flags found in arm64-v8a binary"
+              echo "⚠️ No OpenCL symbols found in arm64-v8a libllama.so - this is expected if the GPU backend is dynamically loaded"
+            fi
+            
+            if nm -D android/src/main/jniLibs/arm64-v8a/libllama.so | grep -i -E "vulkan|vk_|ggml.*vulkan" >/dev/null; then
+              echo "✅ Vulkan symbols found in arm64-v8a libllama.so"
+            else
+              echo "⚠️ No Vulkan symbols found in arm64-v8a libllama.so - this is expected if the GPU backend is dynamically loaded"
+            fi
+            
+            # Check if GPU defines are in the binary
+            if strings android/src/main/jniLibs/arm64-v8a/libllama.so | grep -i -E "LLAMACPPRN_OPENCL_ENABLED=1|LLAMACPPRN_VULKAN_ENABLED=1" >/dev/null; then
+              echo "✅ GPU capability flags found in arm64-v8a binary"
+            else
+              echo "⚠️ No GPU capability flags found in arm64-v8a binary"
+            fi
+          else
+            echo "❌ Main library libllama.so not found for arm64-v8a"
+          fi
+          
+          # Check for architecture-specific correctness
+          if [ -f "android/src/main/jniLibs/arm64-v8a/libllama.so" ]; then
+            file_output=$(file "android/src/main/jniLibs/arm64-v8a/libllama.so")
+            if echo "$file_output" | grep -q "aarch64"; then
+              echo "✅ arm64-v8a library is correctly built for aarch64 architecture"
+            else
+              echo "❌ arm64-v8a library is NOT built for aarch64 architecture: $file_output"
             fi
           fi
           
-          # Check for OpenCL symbols in x86_64 library
-          echo "Checking x86_64 library:"
-          if nm -D android/src/main/jniLibs/x86_64/libllama.so | grep -i "opencl"; then
-            echo "✅ OpenCL symbols found in x86_64 library"
-          else
-            echo "⚠️ No OpenCL symbols found in x86_64 library"
-          fi
-          
-          # Check for Vulkan symbols in x86_64 library - need to check both "vulkan" and "vk_" prefixes
-          if nm -D android/src/main/jniLibs/x86_64/libllama.so | grep -i -E "vulkan|vk_|ggml.*vulkan"; then
-            echo "✅ Vulkan symbols found in x86_64 library"
-          else
-            echo "⚠️ No Vulkan symbols found in x86_64 library"
-            echo "Checking for Vulkan compiler flags in the binary..."
-            
-            # Check if Vulkan defines are in the binary
-            if strings android/src/main/jniLibs/x86_64/libllama.so | grep -i -E "GGML_VULKAN|VK_USE_PLATFORM"; then
-              echo "✅ Vulkan compilation flags found in x86_64 binary"
+          if [ -f "android/src/main/jniLibs/x86_64/libllama.so" ]; then
+            file_output=$(file "android/src/main/jniLibs/x86_64/libllama.so")
+            if echo "$file_output" | grep -q "x86-64"; then
+              echo "✅ x86_64 library is correctly built for x86-64 architecture"
             else
-              echo "❌ No Vulkan compilation flags found in x86_64 binary"
+              echo "❌ x86_64 library is NOT built for x86-64 architecture: $file_output"
             fi
           fi
       
