--- a/example/package.json
+++ b/example/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo run:android",
+    "copy-cpp": "node ./scripts/copy-cpp-files.js",
+    "copy-libs": "node ./scripts/copy-libs.js",
+    "prepare-android": "node ./scripts/prepare-android.js",
+    "clean-android": "cd android && ./gradlew clean && cd ..",
+    "android": "npm run prepare-android && npm run clean-android && expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
