--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,54 +78,78 @@ jobs:
           packages: 'platforms;android-35 build-tools;35.0.0 ndk;27.2.12479018 cmake;3.22.1'
           accept-android-sdk-licenses: true
       
-      - name: Create prebuilt directory
-        run: mkdir -p prebuilt
-      
       - name: Build GPU Libraries
         run: |
+          # Check if llama.cpp directory already exists
+          if [ -d "cpp/llama.cpp" ] && [ -f "cpp/llama.cpp/include/llama.h" ]; then
+            echo "✅ llama.cpp directory already exists, skipping initialization"
+          else
+            # Initialize the llama.cpp repository
+            scripts/setupLlamaCpp.sh init --platform=android
+          fi
+          
           # Get Android NDK path
           NDK_PATH=$ANDROID_HOME/ndk/27.2.12479018
           
-          # Check if Vulkan SDK components are needed
-          if ! command -v glslc &>/dev/null; then
-            echo "Vulkan SDK components not found, installing minimal requirements..."
-            
-            # Check if we now have glslc
-            if command -v glslc &>/dev/null; then
-              GLSLC_PATH=$(which glslc)
-              echo "✅ Found glslc at: $GLSLC_PATH"
-            else
-              echo "⚠️ glslc not found after installation, will use pre-built shaders"
-              GLSLC_PATH=""
-            fi
-          else
-            GLSLC_PATH=$(which glslc)
-            echo "✅ Found glslc at: $GLSLC_PATH"
+          # Install Vulkan development packages as per llama.cpp docs
+          echo "Installing Vulkan development packages..."
+          sudo apt-get update
+          sudo apt-get install -y libvulkan-dev vulkan-tools libvulkan1 mesa-vulkan-drivers
+          
+          # Check if Vulkan is available
+          vulkaninfo --summary || echo "Vulkan info not available, but we'll continue"
+          
+          # Fix the libc++ library issue
+          echo "Fixing libc++ library issues..."
+          sudo apt-get install -y libc++1 libc++abi1
+          
+          # Check system libraries
+          echo "Checking system libc++ libraries..."
+          ls -la /usr/lib/x86_64-linux-gnu/libc++* || echo "No libc++ libraries found in /usr/lib"
+          
+          # Copy libc++ library from NDK to system path
+          echo "Copying libc++ from NDK to system library path..."
+          if [ -f "$NDK_PATH/toolchains/llvm/prebuilt/linux-x86_64/lib64/libc++.so" ]; then
+            sudo cp "$NDK_PATH/toolchains/llvm/prebuilt/linux-x86_64/lib64/libc++.so" /usr/lib/x86_64-linux-gnu/
+            sudo cp "$NDK_PATH/toolchains/llvm/prebuilt/linux-x86_64/lib64/libc++.so" /lib/x86_64-linux-gnu/ || true
+            sudo ldconfig
+            echo "✅ Copied libc++ from NDK to system paths"
+          else 
+            echo "❌ Could not find libc++ in NDK"
+            find "$NDK_PATH" -name "libc++.so" | sort
           fi
           
-          # First build the GPU backend libraries
+          # Set up environment for glslc to find appropriate libraries
+          export LD_LIBRARY_PATH="$NDK_PATH/toolchains/llvm/prebuilt/linux-x86_64/lib64:$LD_LIBRARY_PATH"
+          
+          # Set up environment for the build process
+          export VULKAN_SDK=/usr
+          echo "Using system Vulkan SDK at $VULKAN_SDK"
+          
+          # First build the GPU backend libraries (without the --glslc-path parameter which is not supported)
           echo "Building Android GPU backend libraries..."
-          if [ -n "$GLSLC_PATH" ]; then
-            scripts/build_android_gpu_backend.sh --abi=all --ndk-path="$NDK_PATH" --glslc-path="$GLSLC_PATH"
-          else
-            scripts/build_android_gpu_backend.sh --abi=all --ndk-path="$NDK_PATH"
-          fi
+          scripts/build_android_gpu_backend.sh --abi=all --ndk-path="$NDK_PATH"
           
           # Verify GPU libraries were built in prebuilt directory
           if [ -d "prebuilt/gpu/arm64-v8a" ] && [ "$(ls -A prebuilt/gpu/arm64-v8a/ 2>/dev/null)" ]; then
             echo "✅ Successfully built GPU libraries for arm64-v8a"
             ls -la prebuilt/gpu/arm64-v8a/
           else
-            echo "⚠️ No GPU libraries found for arm64-v8a, build may have failed"
-            # Don't fail the workflow, as we'll still try to build with CPU-only
+            echo "❌ No GPU libraries found for arm64-v8a, build failed"
+            exit 1
           fi
+
+      - name: Initialize llama.cpp for Android
+        run: |
+          mkdir -p prebuilt
+          echo "Initializing llama.cpp for Android platform only..."
           
-          if [ -d "prebuilt/gpu/x86_64" ] && [ "$(ls -A prebuilt/gpu/x86_64/ 2>/dev/null)" ]; then
-            echo "✅ Successfully built GPU libraries for x86_64"
-            ls -la prebuilt/gpu/x86_64/
+          # Check if llama.cpp repository is already initialized at the correct version
+          if [ -d "cpp/llama.cpp" ] && [ -f "cpp/llama.cpp/include/llama.h" ]; then
+            echo "✅ llama.cpp directory already exists, using existing repository"
           else
-            echo "⚠️ No GPU libraries found for x86_64, build may have failed"
-            # Don't fail the workflow, as we'll still try to build with CPU-only
+            # Only initialize if not already done
+            scripts/setupLlamaCpp.sh init --platform=android
           fi
       
       - name: Build Final Android Libraries
@@ -133,113 +157,53 @@ jobs:
           # Get Android NDK path (same as above)
           NDK_PATH=$ANDROID_HOME/ndk/27.2.12479018
           
-          # Now build the final Android libraries incorporating the GPU backends
-          echo "Building Android libraries with OpenCL and Vulkan support..."
-          scripts/build_android_external.sh --abi=all --ndk-path="$NDK_PATH"
+          # Get glslc path
+          GLSLC_PATH="$ANDROID_HOME/ndk/27.2.12479018/shader-tools/linux-x86_64/glslc"
           
-          # Verify libraries were built successfully
-          if [ ! -f "android/src/main/jniLibs/arm64-v8a/libllama.so" ]; then
-            echo "❌ Failed to build arm64-v8a library"
-            exit 1
-          else
-            echo "✅ Successfully built arm64-v8a library"
-            # Verify library is not empty
-            if [ ! -s "android/src/main/jniLibs/arm64-v8a/libllama.so" ]; then
-              echo "⚠️ arm64-v8a library is empty"
-              exit 1
-            fi
+          # Ensure the libc++ library is properly set up for this step as well
+          if [ -f "$NDK_PATH/toolchains/llvm/prebuilt/linux-x86_64/lib64/libc++.so" ]; then
+            echo "Using NDK's libc++ library..."
+            export LD_LIBRARY_PATH="$NDK_PATH/toolchains/llvm/prebuilt/linux-x86_64/lib64:$LD_LIBRARY_PATH"
           fi
           
-          if [ ! -f "android/src/main/jniLibs/x86_64/libllama.so" ]; then
-            echo "❌ Failed to build x86_64 library"
-            exit 1
-          else
-            echo "✅ Successfully built x86_64 library"
-            # Verify library is not empty
-            if [ ! -s "android/src/main/jniLibs/x86_64/libllama.so" ]; then
-              echo "⚠️ x86_64 library is empty"
-              exit 1
-            fi
-          fi
+          # Set up environment for the build process
+          export VULKAN_SDK=/usr
+          export VULKAN_INCLUDE_DIR=/usr/include
+          echo "Using system Vulkan SDK at $VULKAN_SDK"
           
-          # Check for GPU capability flags
-          if [ -f "android/src/main/jniLibs/arm64-v8a/.opencl_enabled" ]; then
-            echo "✅ OpenCL support enabled for arm64-v8a"
-          else
-            echo "⚠️ OpenCL support not enabled for arm64-v8a"
-          fi
+          # Build the final Android libraries with GPU support - note that we use --glslc-path here
+          # which is supported by build_android_external.sh but not by build_android_gpu_backend.sh
+          echo "Building Android libraries with full GPU support..."
+          scripts/build_android_external.sh --abi=all --ndk-path="$NDK_PATH" --glslc-path="$GLSLC_PATH" --platform=android
           
-          if [ -f "android/src/main/jniLibs/arm64-v8a/.vulkan_enabled" ]; then
-            echo "✅ Vulkan support enabled for arm64-v8a"
-          else
-            echo "⚠️ Vulkan support not enabled for arm64-v8a"
-          fi
+          # The build_android_external.sh script handles:
+          # - Building the libraries for each ABI
+          # - Copying OpenCL libraries if available
+          # - Creating appropriate flag files for GPU support
+          # - Verifying architecture and capabilities
       
       - name: Verify Library Architecture and Symbols
         run: |
-          # Detailed verification of the final libraries
-          echo "Checking for GPU backend support and architecture correctness..."
-          
-          # Check x86_64 capability flags
-          echo "Checking x86_64 library for GPU support:"
-          if [ -f "android/src/main/jniLibs/x86_64/.opencl_enabled" ]; then
-            echo "✅ OpenCL support enabled in x86_64 library"
-          else
-            echo "❌ No OpenCL support detected in x86_64 library"
+          # Just some basic sanity checks to make sure the build didn't silently fail
+          if [ ! -f "android/src/main/jniLibs/arm64-v8a/libllama.so" ] || 
+             [ ! -f "android/src/main/jniLibs/x86_64/libllama.so" ]; then
+            echo "❌ Libraries are missing"
+            exit 1
           fi
           
-          if [ -f "android/src/main/jniLibs/x86_64/.vulkan_enabled" ]; then
-            echo "✅ Vulkan support enabled in x86_64 library"
-          else
-            echo "❌ No Vulkan support detected in x86_64 library"
+          # Check file sizes to make sure they're not empty
+          arm64_size=$(stat -c%s "android/src/main/jniLibs/arm64-v8a/libllama.so" 2>/dev/null || 
+                      stat -f%z "android/src/main/jniLibs/arm64-v8a/libllama.so")
+          x86_64_size=$(stat -c%s "android/src/main/jniLibs/x86_64/libllama.so" 2>/dev/null || 
+                       stat -f%z "android/src/main/jniLibs/x86_64/libllama.so")
+          
+          if [ "$arm64_size" -lt 1000000 ] || [ "$x86_64_size" -lt 1000000 ]; then
+            echo "❌ Libraries are too small, build likely failed"
+            exit 1
           fi
           
-          # Verify that the main libraries exist and contain GPU symbols
-          if [ -f "android/src/main/jniLibs/arm64-v8a/libllama.so" ]; then
-            echo "Checking for GPU symbols in the main arm64-v8a library:"
-            
-            # Check for OpenCL and Vulkan symbols in the actual libllama.so
-            if nm -D android/src/main/jniLibs/arm64-v8a/libllama.so | grep -i "opencl" >/dev/null; then
-              echo "✅ OpenCL symbols found in arm64-v8a libllama.so"
-            else
-              echo "⚠️ No OpenCL symbols found in arm64-v8a libllama.so - this is expected if the GPU backend is dynamically loaded"
-            fi
-            
-            if nm -D android/src/main/jniLibs/arm64-v8a/libllama.so | grep -i -E "vulkan|vk_|ggml.*vulkan" >/dev/null; then
-              echo "✅ Vulkan symbols found in arm64-v8a libllama.so"
-            else
-              echo "⚠️ No Vulkan symbols found in arm64-v8a libllama.so - this is expected if the GPU backend is dynamically loaded"
-            fi
-            
-            # Check if GPU defines are in the binary
-            if strings android/src/main/jniLibs/arm64-v8a/libllama.so | grep -i -E "LLAMACPPRN_OPENCL_ENABLED=1|LLAMACPPRN_VULKAN_ENABLED=1" >/dev/null; then
-              echo "✅ GPU capability flags found in arm64-v8a binary"
-            else
-              echo "⚠️ No GPU capability flags found in arm64-v8a binary"
-            fi
-          else
-            echo "❌ Main library libllama.so not found for arm64-v8a"
-          fi
-          
-          # Check for architecture-specific correctness
-          if [ -f "android/src/main/jniLibs/arm64-v8a/libllama.so" ]; then
-            file_output=$(file "android/src/main/jniLibs/arm64-v8a/libllama.so")
-            if echo "$file_output" | grep -q "aarch64"; then
-              echo "✅ arm64-v8a library is correctly built for aarch64 architecture"
-            else
-              echo "❌ arm64-v8a library is NOT built for aarch64 architecture: $file_output"
-            fi
-          fi
-          
-          if [ -f "android/src/main/jniLibs/x86_64/libllama.so" ]; then
-            file_output=$(file "android/src/main/jniLibs/x86_64/libllama.so")
-            if echo "$file_output" | grep -q "x86-64"; then
-              echo "✅ x86_64 library is correctly built for x86-64 architecture"
-            else
-              echo "❌ x86_64 library is NOT built for x86-64 architecture: $file_output"
-            fi
-          fi
-      
+          echo "✅ Library validation passed"
+
       - name: Upload Android Native Libs
         uses: actions/upload-artifact@v4
         with:
@@ -263,8 +227,13 @@ jobs:
       
       - name: Setup iOS Framework
         run: |
-          # Initialize the llama.cpp repository if needed
-          scripts/setupLlamaCpp.sh init
+          # Check if llama.cpp directory already exists
+          if [ -d "cpp/llama.cpp" ] && [ -f "cpp/llama.cpp/include/llama.h" ]; then
+            echo "✅ llama.cpp directory already exists, skipping initialization"
+          else
+            # Initialize the llama.cpp repository if needed
+            scripts/setupLlamaCpp.sh init
+          fi
           
           # Use the build_apple_external.sh to set up iOS framework
           scripts/build_apple_external.sh init
