--- a/package.json
+++ b/package.json
@@ -13,12 +13,22 @@
     "android",
     "ios",
     "cpp",
-    "shared",
-    "scripts",
+    "!cpp/llama.cpp/examples",
+    "!cpp/llama.cpp/tools",
+    "!cpp/llama.cpp/.devops",
+    "!cpp/llama.cpp/.github",
+    "!cpp/llama.cpp/.git",
+    "!cpp/llama.cpp/.gitignore",
+    "!cpp/llama.cpp/.gitmodules",
+    "!cpp/llama.cpp/ci",
+    "!cpp/llama.cpp/docs",
+    "!cpp/llama.cpp/scripts",
+    "!cpp/llama.cpp/tests",
     "*.podspec",
     "!lib/typescript/example",
     "!ios/build",
     "!android/build",
+    "!android/.cxx",
     "!android/gradle",
     "!android/gradlew",
     "!android/gradlew.bat",
